Finalizacion de la interfaz de Inicio de sesion, registro y recuperacion de contraseña

--- a/PortalGSI/Content/assets/css/style.css
+++ b/PortalGSI/Content/assets/css/style.css
@@ -485,6 +485,14 @@ a.the-title:hover {
   color: #f26522;
 }
 
+a.secondary {
+  color: #f26522;
+}
+
+a.secondary:hover {
+  color: #ffffff;
+}
+
 .bg-alt {
   background: #e5eef6;
 }
