--- a/PortalGSI/Views/Shared/FrontPageLayout.cshtml
+++ b/PortalGSI/Views/Shared/FrontPageLayout.cshtml
@@ -48,7 +48,9 @@
                                 </li>
                             </ul>
                             <!-- social icons close -->
-                            <div class="topbar-text fright"> Opening Hours : Monday to Saturday - 8am to 9pm</div>
+                            <div class="fright">
+                            <a class="btn" href="@Url.Action("Login", "Home")" style="position: absolute; top: 50%; transform: translateY(-50%); ">INICIAR SESIÓN</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -89,8 +91,8 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <div class="header-mainnav">
-
                                     <div class="search-cart-box fright">
+
                                         <div class="h-cart-btn fright"><a href="#"><i class="fa fa-shopping-cart" aria-hidden="true"></i></a></div>
 
                                         <div class="toggle_search fright"><i class="fa fa-search" aria-hidden="true"></i></div>
