--- a/PortalGSI/Views/Home/Seguro1.cshtml
+++ b/PortalGSI/Views/Home/Seguro1.cshtml
@@ -5,18 +5,19 @@
 }
 
 <div id="content" class="site-content">
+
     <div class="page-header">
         <div class="container">
             <div class="breadc-box no-line">
                 <div class="row">
                     <div class="col-md-6">
-                        <h1 class="page-title">Financial Consulting</h1>
+                        <h1 class="page-title">Seguro de fidelidad de empresas</h1>
                     </div>
                     <div class="col-md-6 mobile-left text-right">
                         <ul id="breadcrumbs" class="breadcrumbs none-style">
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="services.html">Services</a></li>
-                            <li class="active">Financial Consulting</li>
+                            <li><a href="@Url.Action("Index","Home")">Inicio</a></li>
+                            <li><a href="@Url.Action("Seguros_List","Home")">Seguros</a></li>
+                            <li class="active">Seguro de fidelidad de empresas</li>
                         </ul>
                     </div>
                 </div>
@@ -39,32 +40,35 @@
                                             <div class="wpb_column column_container col-sm-12">
                                                 <div class="column-inner">
                                                     <div class="wpb_wrapper">
-                                                        <h2>Our specific work</h2>
+                                                        <h2>Que abarca?</h2>
                                                         <div class="wpb_text_column wpb_content_element">
                                                             <div class="wpb_wrapper">
-                                                                <p>Just before European Union leaders agreed their guidelines for the Brexit negotiations last week, the president of the EU council, Donald Tusk, said: It is clear that progress on people, money and Ireland must come first. It was rather startling to find Irish concerns up there on the list of fundamental priorities, with the rights of EU citizens in Britain.</p>
-                                                                <p>And when the guidelines were agreed, it was clear that this was more than rhetoric. EU governments have essentially committed themselves to allowing Northern Ireland to rejoin the EU if Ireland is united. This is a very big dealrather startling to find Irish concerns up there on the list of fundamental priorities,.</p>
+                                                                <p>
+                                                                    Este seguro cubre la pérdida de dinero o mercancías
+                                                                    pertenecientes al asegurado, cuando tales pérdidas
+                                                                    corresponden a actos fraudulentos de los
+                                                                    colaboradores.
+                                                                </p>
+                                                                <p>Ofrece cobertura a empresas ante pérdidas producto de actos fraudulentos e indebidos cometidos por sus empleados, cuando hayan sido provocados por estos con el fin de obtener beneficios financieros para ellos mismos.</p>
 
                                                             </div>
                                                         </div>
                                                         <div class="empty_space_30"></div>
-                                                        <h4>Our process</h4>
+                                                        <h4>Que analizamos para definir el costo de la poliza</h4>
                                                         <div class="wpb_text_column wpb_content_element">
                                                             <div class="wpb_wrapper">
                                                                 <p>
-                                                                    <strong><span class="orange">Step 1: </span></strong> Receive and Evaluate
+                                                                    <strong><span class="orange">Step 1: </span></strong> Tipo de negocio
                                                                     <br>
-                                                                    <strong><span class="red">Step 2: </span></strong> Analysis and Planning
+                                                                    <strong><span class="red">Step 2: </span></strong> Cantidad de empleados asegurados
                                                                     <br>
-                                                                    <strong><span class="green">Step 3: </span></strong> Make plans and Implement
+                                                                    <strong><span class="green">Step 3: </span></strong> Monto asegurado
                                                                 </p>
 
                                                             </div>
                                                         </div>
+                                                        
                                                         <div class="empty_space_30"></div>
-                                                        <h4>Analysis charts and statistics</h4>
-                                                        <img src="https://via.placeholder.com/700x410" alt="">
-                                                        <div class="empty_space_45"></div>
                                                         <h4>What you got ?</h4>
                                                         <div class="wpb_text_column wpb_content_element">
                                                             <div class="wpb_wrapper">
@@ -75,67 +79,75 @@
                                                             <br />
 
                                                             <div class="wpb_wrapper">
-                                                                <button type="button" id="info_btn" class="wpcf7-form-control wpcf7-submit btn">Solicitar Informacion</button>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
+
+                                                                <!-- <button
+                                                id="info_btn" type="submit" class="wpcf7-form-control wpcf7-submit btn">
+                                            Solicitar Informacion
+                                        </button> -->
+                                               <a href="@Url.Action("Forms" , "Home")" class="wpcf7-form-control wpcf7-submit btn" > Solicitar Informacion </a>
+
                                             </div>
                                         </div>
                                     </div>
-                                </section>
+                                </div>
                             </div>
-                        </article>
+                        </div>
+                    </div>
+                </section>
+            </div>
+        </article>
 
-                    </main>
-                    <!-- #main -->
-                </div>
+    </main>
+    <!-- #main -->
+                                                            </div>
 
                 <aside id="sidebar" class="widget-area service-sidebar col-lg-4 col-md-4 col-sm-12 col-xs-12">
                     <section id="nav_menu-1" class="widget widget_nav_menu">
-                        <h4 class="widget-title">Services</h4>
+                        <h4 class="widget-title">Seguros</h4>
                         <div class="menu-service-menu-container">
                             <ul id="menu-service-menu" class="menu">
-                                <li><a href="service-detail.html">Audit &amp; Assurance</a></li>
-                                <li class="current-menu-item"><a href="service-detail.html">Financial Consulting</a></li>
-                                <li><a href="service-detail.html">Trades & Stocks</a></li>
-                                <li><a href="service-detail.html">Strategic Planning</a></li>
-                                <li><a href="service-detail.html">Financial Projections</a></li>
-                                <li><a href="service-detail.html">Bonds & Commodities</a></li>
-                                <li><a href="service-detail.html">Taxes and Efficiency</a></li>
-                                <li><a href="service-detail.html">Finance and Restructuring</a></li>
-                                <li><a href="service-detail.html">International Business</a></li>
+                                <li><a href="service-detail.html">Seguro Proteccion Crediticia</a></li>
+                                <li class="current-menu-item"><a href="service-detail.html">Seguro de Fidelidad de Empresas</a></li>
+                                <li><a href="service-detail.html">Seguros contra inundaciones</a></li>
+                                <li><a href="service-detail.html">Seguros de valores de carga</a></li>
+                                <li><a href="service-detail.html">Seguro Medico Colectivo</a></li>
+                                <li><a href="service-detail.html">Seguro Tecnico</a></li>
+                                <li><a href="service-detail.html">Seguro de vida colectiva</a></li>
+                                <li><a href="service-detail.html">Seguro de Robo Comerical</a></li>
+                                <li><a href="service-detail.html">Seguro Viajero</a></li>
                         </div>
                     </section>
-                    <section id="text-1" class="widget widget_text bg-second text-light">
-                        <h4 class="widget-title">Do you need support !</h4>
-                        <div class="textwidget">
-                            <ul class="semi-bold">
-                                <li><span class="normal">Phone:</span> <a href="tel:+1253 1245 1245">+1253 1245 1245</a></li>
-                                <li>
-                                    <span class="normal">Office London:</span> Flat 60, Ross Green,
-                                    <br> South Lilyberg, Q7M 8ZV, London,
-                                    <br> England
-                                </li>
-                                <li><span class="normal">Mail:</span> <a href="mailto:info.londonconsulting.com">info.londonconsulting.com</a></li>
-                            </ul>
-                            <div class="gaps style-parent"></div>
-                            <div class="wpcf7">
-                                <div class="screen-reader-response"></div>
-                                <form action="#" method="post" class="wpcf7-form">
-                                    <p>
-                                        <span class="wpcf7-form-control-wrap your-email">
-                                            <input type="email" name="your-email" value="" size="40" class="wpcf7-form-control" required="" placeholder="Email Address">
-                                        </span>
-                                        <span class="wpcf7-form-control-wrap your-phone">
-                                            <input type="tel" name="your-phone" value="" size="40" class="wpcf7-form-control" required="true" placeholder="Phone Number">
-                                        </span>
-                                        <input type="submit" value="SUBMIT" class="wpcf7-form-control wpcf7-submit btn">
-                                    </p>
-                                </form>
-                            </div>
-                        </div>
-                    </section>
+                    <!--
+    <section id="text-1" class="widget widget_text bg-second text-light">
+        <h4 class="widget-title">Do you need support !</h4>
+        <div class="textwidget">
+            <ul class="semi-bold">
+                <li><span class="normal">Phone:</span> <a href="tel:+1253 1245 1245">+1253 1245 1245</a></li>
+                <li>
+                    <span class="normal">Office London:</span> Flat 60, Ross Green,
+                    <br> South Lilyberg, Q7M 8ZV, London,
+                    <br> England
+                </li>
+                <li><span class="normal">Mail:</span> <a href="mailto:info.londonconsulting.com">info.londonconsulting.com</a></li>
+            </ul>
+            <div class="gaps style-parent"></div>
+            <div class="wpcf7">
+                <div class="screen-reader-response"></div>
+                <form action="#" method="post" class="wpcf7-form">
+                    <p>
+                        <span class="wpcf7-form-control-wrap your-email">
+                            <input type="email" name="your-email" value="" size="40" class="wpcf7-form-control" required="" placeholder="Email Address">
+                        </span>
+                        <span class="wpcf7-form-control-wrap your-phone">
+                            <input type="tel" name="your-phone" value="" size="40" class="wpcf7-form-control" required="true" placeholder="Phone Number">
+                        </span>
+                        <input type="submit" value="SUBMIT" class="wpcf7-form-control wpcf7-submit btn">
+                    </p>
+                </form>
+            </div>
+        </div>
+    </section>
+        --> 
                 </aside>
 
             </div>
@@ -143,50 +155,28 @@
     </div>
 
 
-    <form id="form1">
-        <b>First Name:</b> <input type="text" name="firstName">
-        <br><br>
-        <b>Last Name: </b><input type="text" name="lastName">
-        <br><br>
-        <b> Age:</b>
-        <br>
-        <input type="radio" name="age" value="adolescent"> 0 - 19 years
-        <br>
-        <input type="radio" name="age" value="mid"> 20 - 59 years
-        <br>
-        <input type="radio" name="age" value="senior"> 60 + years
-        <br> <br>
-        <b>Preferred Color:</b>
-        <select name="color">
-            <option value="blue">Blue</option>
-            <option value="green">Green</option>
-            <option value="yellow">Yellow</option>
-            <option value="red">Red</option>
-            <option value="pink">Pink</option>
-        </select>
-        <br><br>
-        <b>Comment:</b>
-        <br>
-        <textarea name="comment">
-    Enter your comment here
-  </textarea>
-        <br><br>
-        <button type="button" id="submit">Submit</button>
-    </form>
-
 </div>
+
+
+
 <script type="text/javascript">
 
-
+    /*
     $(document).ready(function () {
         $("#info_btn").click(function () {
-            $("#form1").toggle();
+            $('#form_modal').modal('show');
+            $("#form_modal").toggle();
+            $("#form_modal").modal('toggle');
         });
     });
-  
+    */
+    /*
     $("#info_btn").click(function () {
-        $("#form1").toggle();
+        $('#form_modal').modal('show');
+        $("#form_modal").toggle();
+        $("#form_modal").modal('toggle');
     });
 
-
+    */
+    
 </script>
